Remove UseCGroupMemoryLimitForHeap option as it was removed in JRE 11 (#280)
Also remove UnlockExperimentalVMOptions as it existed to enable
UseCGroupMemoryLimitForHeap